pizza-exp-chart/subcharts/redis-cache/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master 
  labels:
    app: redis       
spec:
  selector:
    matchLabels:     
      app: redis
  replicas: 1        
  template:          
    metadata:
      labels:        
        app: redis
    spec:            
      containers:
      - name: master
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
