pizza-exp-chart/subcharts/redis-cache/templates/service.yml
apiVersion: v1
kind: Service        
metadata:
  name: redis-master 
  labels:            
    app: redis
spec:
  ports:
  - port: 6379       
    targetPort: 6379
  selector:          
    app: redis
