pizza-exp-chart/subcharts/redis-cache/templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redis-master
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: redis.ilan.com
      http:
        paths:
          - path: /
            backend:
              serviceName: redis-master
              servicePort: 6379
